--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="img/logo.png" alt="">
                 </div>
                 <div class="new-task">
-                    <input type="text" v-model="newTask" @keyup.enter="addNewTask">
+                    <input type="text" v-model="newTask" @keyup.enter="addNewTask" placeholder="Inserisci una nuova task">
                     <button @click="addNewTask">Aggiungi</button>
                 </div>
 
@@ -27,9 +27,9 @@
                     <ul>
                         <li class="task" v-for="(todo, index) in todos"
                         :class="{ done: todo.done }"
-                        @click="changeTaskStatus(index)">
+                        @click="changeTaskStatus(index)"> 
                             {{ todo.text }}
-                            <i class="fas fa-times" @click="removeTask(index)"></i>
+                            <i class="fas fa-times" @click.stop="removeTask(index)"></i>
                         </li>
                     </ul>
                 </div>
